--- a/src/index.css
+++ b/src/index.css
@@ -1533,13 +1533,12 @@ body {
 
 .preview-content h3 {
   margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+  font-size: 1.5em;
   color: #fff;
 }
 
 .preview-content p {
   margin: 0.75rem 0;
-  font-size: 1rem;
 }
 
 .setting-select {
